Fix on mobile

--- a/admin-dev/themes/default/scss/partials/_nav.scss
+++ b/admin-dev/themes/default/scss/partials/_nav.scss
@@ -81,6 +81,10 @@
 
       .link-leveltwo .link {
         padding-left: 1rem;
+
+        @include media-breakpoint-down(md) {
+          padding-left: 0.625rem;
+        }
       }
     }
 
